
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef int u8 ;
typedef int u16 ;



__attribute__((used)) static u8 drm_dp_msg_data_crc4(const uint8_t *data, u8 number_of_bytes)
{
 u8 bitmask = 0x80;
 u8 bitshift = 7;
 u8 array_index = 0;
 int number_of_bits = number_of_bytes * 8;
 u16 remainder = 0;

 while (number_of_bits != 0) {
  number_of_bits--;
  remainder <<= 1;
  remainder |= (data[array_index] & bitmask) >> bitshift;
  bitmask >>= 1;
  bitshift--;
  if (bitmask == 0) {
   bitmask = 0x80;
   bitshift = 7;
   array_index++;
  }
  if ((remainder & 0x100) == 0x100)
   remainder ^= 0xd5;
 }

 number_of_bits = 8;
 while (number_of_bits != 0) {
  number_of_bits--;
  remainder <<= 1;
  if ((remainder & 0x100) != 0)
   remainder ^= 0xd5;
 }

 return remainder & 0xff;
}
